--- a/style.css
+++ b/style.css
@@ -12,6 +12,105 @@ color: #434343;
     }
 
 
+.duration{padding: 8px 0px 20px;
+    font-size: 16px;}
+
+.card-text{padding-top: 1em;padding-bottom: 2em;}
+.card-text h2:hover{color:#000;}
+.card-text p{line-height: 180%;}
+
+ 
+
+  .content img {width:90%}
+  .card-image {
+    transition: transform .1s;
+    margin: 0 auto;
+  }
+  
+ .card-image:hover {
+    z-index:999; 
+    cursor: pointer;
+    -ms-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05); 
+  } 
+ .card-image {width: 90%;}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  background-color: #C6E8FF; 
+  box-shadow: 0 3px 10px 0 rgb(189, 233, 241);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+
+}
+    
+    .card-container{ 
+      font-size: 21px;
+      padding-left: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 20px);
+      padding-right: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 20px);
+      padding-top: 8rem;
+      display: block;
+    
+    }
+
+
+    .card-container{ 
+      padding-left: 1rem;
+      padding-right: 1rem;
+      padding-top: 8rem;
+      display: block;
+    }
+
+    .content img {
+      width:80%;
+      margin: auto;
+      display: block;
+      transition: transform .2s;}
+
+.title-page
+    {
+        font-size: 18px;
+        padding-left: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10px);
+        padding-right: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10px);
+        padding-top: 120px;
+        padding-bottom: 40px;
+        line-height: 250%;
+    
+    }
+    
+    .space{height: 4rem;}
+
+    .section{
+      font-size: 21px;
+      line-height: 180%;
+      padding-left: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10px);
+      padding-right: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10px);
+      padding-top:1rem;
+      padding-bottom: 1rem;
+      margin-bottom: 20px;
+    }
+
+
+.content{padding-top: 6rem; padding-bottom: 2rem;}
+
+.content:nth-child(odd){background: #DEF3FF;}
+.content:nth-child(even){background: #D4EEFF;}
+
+
+
+ /*  img:hover{ z-index:999; 
+    cursor: pointer;
+    -ms-transform: scale(1.05); 
+    -webkit-transform: scale(1.05); 
+    transform: scale(1.05);} 
+
+    */
+
+
+
+
     .button {
       background-color: #2b5893;
       border: none;
@@ -33,98 +132,7 @@ color: #434343;
       color: white;
     }
 
-    .duration{padding: 8px 0px 20px;
-    font-size: 16px;}
-
-.card-text{padding-top: 1em;padding-bottom: 2em;
-
-  }
-
-  .section-image{
-    transition: transform .1s;
-    margin: 0 auto;
-  }
-
-
-  .card-image {
-    transition: transform .1s;
-    margin: 0 auto;
-  }
-  
-/*   .card-image:hover {
-    z-index:999; 
-    cursor: pointer;
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.5);
-    transform: scale(1.01); 
-  } */
- .card-image {
-   width: 100%;
-}
-.card{
-  display: flex;
-  flex-direction: column;
-  background-color: #C6E8FF; 
-  box-shadow: 0 3px 10px 0 rgb(189, 233, 241);
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-
-}
-    
-    .card-container{ 
-      font-size: 21px;
-      padding-left: min(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10%);
-      padding-right: min(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10%);
-      padding-top: 8rem;
-      display: block;
-    
-    }
-
-
-.title-page
-    {
-        font-size: 18px;
-        padding-left: min(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10%);
-        padding-right: min(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 10%);
-        padding-top: 120px;
-        padding-bottom: 40px;
-        line-height: 250%;
-        font-weight: 600;
-    
-    }
-    
-    .space{height: 4rem;}
-    .section{
-      font-size: 21px;
-      line-height: 180%;
-      padding-left: calc(60px + (40 - 20) * (100vw - 600px) / (50));
-      padding-right: calc(60px + (40 - 20) * (100vw - 600px) / (50));
-      padding-top:1rem;
-      padding-bottom: 1rem;
-      margin-bottom: 20px;
-    }
-
-.content{padding-top: 6rem; padding-bottom: 4rem;}
-
-.content:nth-child(odd){background: #DEF3FF;}
-.content:nth-child(even){background: #D4EEFF;}
-
-  img {
-    margin: auto;
-    display: block;
-    transition: transform .2s;
-    
-  }
-  
-
- /*  img:hover{ z-index:999; 
-    cursor: pointer;
-    -ms-transform: scale(1.05); 
-    -webkit-transform: scale(1.05); 
-    transform: scale(1.05);} 
-
-    */
-
+    h1, h2{font-weight:600;}
 
   a {
     color: #000;
@@ -153,6 +161,7 @@ color: #434343;
   }
   
   .header li a {
+    font-family: "Poppins", sans-serif;
     display: block;
     padding: 25px 20px;
     text-decoration: none;
@@ -170,6 +179,7 @@ color: #434343;
     font-size: 1.5em;
     padding: 15px 20px;
     text-decoration: none;
+    font-family: "Poppins", sans-serif;
   }
   
   /* menu */
@@ -251,7 +261,7 @@ color: #434343;
   
   /* 48em = 768px */
   
-  @media (min-width: 75em) {
+  @media (min-width: 60em) {
 
     
     .header li {
@@ -273,15 +283,31 @@ color: #434343;
 
 
     .button{display: inline-block; position: relative; top: 20px;}
-  
-    
       .card{
         flex-direction: row;
       }
 
     .card-image {
       float: right;
-      max-width: 50%;
+      min-width: 50%;
+    }
+    .card-text{padding-right:2rem;}
+
+    .card-container{ 
+      padding-left: 12rem;
+      padding-right: 12rem;
+      padding-top: 8rem;
+      display: block;
+    }
+    .content img {width:80%}
+    content{padding-top: 6rem; padding-bottom: 4rem;}
+    .title-page
+    {
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top: 120px;
+        padding-bottom: 40px;
+    
     }
 
   }
