--- a/style.css
+++ b/style.css
@@ -21,12 +21,8 @@ color: #434343;
 
  
 
-  .content img {width:90%}
-  .card-image {
-    transition: transform .1s;
-    margin: 0 auto;
-  }
-  
+
+
  .card-image:hover {
     z-index:999; 
     cursor: pointer;
@@ -34,7 +30,10 @@ color: #434343;
     -webkit-transform: scale(1.05);
     transform: scale(1.05); 
   } 
- .card-image {width: 90%;}
+ .card-image {width: 90%;
+  transition: transform .1s;
+  margin: 0 auto;}
+
 
 .card{
   display: flex;
@@ -63,11 +62,7 @@ color: #434343;
       display: block;
     }
 
-    .content img {
-      width:80%;
-      margin: auto;
-      display: block;
-      transition: transform .2s;}
+  
 
 .title-page
     {
@@ -80,6 +75,24 @@ color: #434343;
     
     }
     
+    .container img {width:90%;
+      
+      display: block;
+      margin: auto;
+      
+    }
+
+
+    .content img {width:90%}
+
+  
+    .content img {
+      width:80%;
+      margin: auto;
+      display: block;
+      transition: transform .2s;}
+
+      
     .space{height: 4rem;}
 
     .section{
@@ -299,8 +312,18 @@ color: #434343;
       padding-top: 8rem;
       display: block;
     }
+    
+    .container img 
+    {width:80%;
+      
+      margin: auto;
+    }
+
     .content img {width:80%}
-    content{padding-top: 6rem; padding-bottom: 4rem;}
+
+
+    .content{padding-top: 6rem; padding-bottom: 4rem;}
+
     .title-page
     {
         padding-left: 10%;
