--- a/style.css
+++ b/style.css
@@ -7,17 +7,9 @@ font-weight: 400;
 color: #2a2a2a;
 }
 
-.container{background:  #c7dffd;}
-.content:nth-child(odd){background: #c7dffd;}
-.content:nth-child(even){background: #D3E7FF;}
-
-
-/* .content:nth-child(odd){background: #D3E7FF;}
-.content:nth-child(even){background: #DEEDFF;} */
-
-/* .container{background:  #FDBEA9;}
-.content:nth-child(even){background: #FDE0CF;}
-.content:nth-child(odd){background: #FFECE0;} */
+/* .container{background:  #D7EFFF;} */
+.content:nth-child(odd){background: #C6E8FF;}
+.content:nth-child(even){background: #D7EFFF; }
 .content:first-child{padding-top: 12rem;}
 .content{padding-top: 4rem; padding-bottom: 4rem;}
 .content img{max-width: 100%;}
@@ -30,21 +22,24 @@ color: #2a2a2a;
   color: #1F3856;
   text-align: center;}
 
-.intro-text {font-size: 2vw; line-height: 160%;}
-.intro h1{font-size: 6vw; font-weight: 600; line-height: 200%;}
+.intro-text {font-size: 2vw; font-weight: 500; line-height: 160%;}
+.intro h1{font-size: 6vw; font-weight: 500; line-height: 200%;}
 
 p{padding-bottom: 1.25rem;font-size: 21px; font-weight:400; 
   font-family: "Poppins", sans-serif; color: #434343; text-align: justify;}
 p.thick {font-weight: 600; padding-bottom: 1rem;}
 p.left {text-align: left;} 
 p.medium{font-size: 18px; margin-top: -1rem;}
-
+p.caption{font-size: 18px; margin-bottom: -1rem;}
 
 
 p.small{font-size: 16px; text-align: center; padding: 1rem 0rem ;}
 h2{line-height: 150%;}
 h1, h2, h4 {font-weight:500;}
-h1 {font-size: 32px; line-height: 150%;}
+h1 {font-size: 36px; line-height: 150%; padding-bottom: .5rem;}
+
+h4{font-size: 21px;color: #434343; padding-bottom: 1rem;}
+h2{font-size: 24px; color: #434343;}
 
 .number-items li{margin-left:20px; padding-left: 10px; padding-top: 1.25rem;}
 .number-items li:last-child{padding-bottom: 1.25rem;}
@@ -53,8 +48,6 @@ h1 {font-size: 32px; line-height: 150%;}
 .bullet-items li:first-child{padding-top: 0px;}
 .space{height:1rem;}
 .block{padding:0px 0px;}
-/* .margin-zero{margin-top:-20px;} */
-/* ul {margin-top:-20px;} */
 
 .highlight{font-size: 24px; padding:40px; background-color:white;}
 .highlight-content{margin-bottom:40px; padding:40px; color:#525252; font-size: 18px; background-color:#E7F2FE; border: 2px solid #0096FF; border-radius: 10px;}
@@ -231,15 +224,15 @@ margin: 0 auto;}
 
   
   
-    .section {
+   /*  .section {
       font-size: 21px;
       line-height: 180%;
       padding-left: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 20px);
       padding-right: max(calc(60px + (40 - 20) * (100vw - 600px) / (50)), 20px);
-      /* padding-top:1rem; */
+      padding-top:1rem;
       padding-bottom:2rem;
       margin-bottom: 20px;
-    }
+    } */
    
 
   /* header */
@@ -370,13 +363,8 @@ margin: 0 auto;}
 @media only screen and (max-width: 48em) {
 
   .content:first-child{padding-top: 8rem;}
-
   .duration{padding-top:0px; padding-bottom:10px;font-size: 18px;}
 
-  .measure-section .arrow{display: none; background-color: red;}
-
-
-  .measure-section {display: flex; flex-wrap: wrap ; justify-items: flex-start; align-items: baseline;}
   
       .card-container{ 
         padding-left: 20px;
@@ -384,8 +372,6 @@ margin: 0 auto;}
         padding-top: 8rem;
         display: block;
       }
-
-      
 
       .card-image {width: 100%;}
       .bullet-items li{margin-left:12px; padding-left: 4px; padding-top: 1.25rem;}
@@ -427,7 +413,7 @@ margin: 0 auto;}
     .content:first-child{padding-top: 8rem;} 
 
     .section-grid h2{font-size: 36px;}
-    .duration {font-size: 21px;}
+    .duration{padding-top:0px; padding-bottom:10px;font-size: 18px;}
     p{padding-bottom: 1.25rem;font-size: 24px; line-height: 180%; text-align: justify;}
     .section-grid {
       padding: 0px 40px;
@@ -463,7 +449,7 @@ margin: 0 auto;}
 
 
 
-  .small-grid {
+  /* .small-grid {
     grid-template-columns: repeat(10, 1fr);
     gap: 4rem;
   }
@@ -473,7 +459,7 @@ margin: 0 auto;}
 
   .small-right{ grid-column-start: 2;
     grid-column-end: 10;
-  }
+  } */
     
   }
 
@@ -485,14 +471,14 @@ margin: 0 auto;}
   .button{display: none;}
   .block{padding:0px 20px 20px;}
 
-  .section-grid h2{font-size: 24px;}
-  .duration {font-size: 16px;}
-    p {font-size: 18px;}
-    
+  
+  .section-grid h2{font-size: 28px;}
+  .duration{padding-top:0px; padding-bottom:10px;font-size: 18px;}
+  p {font-size: 20px;}
 
-    .title-page {margin-top: 0rem; padding:0px 40px;}
-    .title-content{padding-top: 12rem;}
-    .content:first-child{padding-top: 8rem;}
+  .title-page {margin-top: 0rem; padding:0px 40px;}
+  .title-content{padding-top: 12rem;}
+  .content:first-child{padding-top: 8rem;}
 
   .intro {padding:2rem 0rem; justify-content: center; align-content: center;}
   .intro-hero {padding-bottom: 4rem;}
@@ -501,35 +487,33 @@ margin: 0 auto;}
   .intro * {text-align: center;}
 
   /* Section Grids*/
-  
-
 
   .section-grid {
     grid-template-columns: repeat(10, 1fr);
   }
   .section-center{
-    grid-column-start: 3;
-    grid-column-end: 9;
-  }
-
-  .section-left {
-    grid-column-start: 3;
-    grid-column-end: 9;
-  }
-
-  .section-right {
-    grid-column-start: 3;
-    grid-column-end: 9;
-  }
-
-  .section-wide{
     grid-column-start: 2;
     grid-column-end: 10;
   }
 
+  .section-left {
+    grid-column-start: 2;
+    grid-column-end: 10;
+  }
+
+  .section-right {
+    grid-column-start: 2;
+    grid-column-end: 10;
+  }
+
+  .section-wide{
+    grid-column-start: 1;
+    grid-column-end: 11;
+  }
+
   .section-large{
-    grid-column-start: 3;
-    grid-column-end: 9;
+    grid-column-start: 2;
+    grid-column-end: 10;
   }
 
 }
@@ -552,8 +536,8 @@ margin: 0 auto;}
 
   .section-grid h2{font-size: 32px; max-width: 35ch;}
   
-  .duration {font-size: 18px;}
-    p {font-size: 21px;}
+  /* .duration{padding-top:0px; padding-bottom:10px;font-size: 18px;} */
+    p {font-size: 20px;}
 
   .description {max-width: 48ch;}
 
