--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ color: #2a2a2a;
 }
 
 /* .container{background:  #D7EFFF;} */
-.content:nth-child(odd){background: #C6E8FF;}
-.content:nth-child(even){background: #D7EFFF; }
+.content:nth-child(odd){background: #e4edfa;}
+.content:nth-child(even){background: rgb(241, 247, 255); }
 .content:first-child{padding-top: 12rem;}
 .content{padding-top: 4rem; padding-bottom: 4rem;}
 .content img{max-width: 100%;}
@@ -31,15 +31,14 @@ p.thick {font-weight: 600; padding-bottom: 1rem;}
 p.left {text-align: left;} 
 p.medium{font-size: 18px; margin-top: -1rem;}
 p.caption{font-size: 18px; margin-bottom: -1rem;}
+p.top-heading {font-family: "Merriweather", serif; font-size: 24px; font-weight: 600; margin-bottom: -1rem;}
 
 
 p.small{font-size: 16px; text-align: center; padding: 1rem 0rem ;}
 h2{line-height: 150%;}
-h1, h2, h4 {font-weight:500;}
+h1, h2{font-weight:500;}
 h1 {font-size: 36px; line-height: 150%; padding-bottom: .5rem;}
-
-h4{font-size: 21px;color: #434343; padding-bottom: 1rem;}
-h2{font-size: 24px; color: #434343;}
+h2{font-size: 24px; color: #434343; font-family: "Merriweather", serif; font-weight:600;}
 
 .number-items li{margin-left:20px; padding-left: 10px; padding-top: 1.25rem;}
 .number-items li:last-child{padding-bottom: 1.25rem;}
@@ -49,7 +48,7 @@ h2{font-size: 24px; color: #434343;}
 .space{height:1rem;}
 .block{padding:0px 0px;}
 
-.highlight{font-size: 24px; padding:40px; background-color:white;}
+.highlight{ font-size: 24px; padding:40px; background-color:white;}
 .highlight-content{margin-bottom:40px; padding:40px; color:#525252; font-size: 18px; background-color:#E7F2FE; border: 2px solid #0096FF; border-radius: 10px;}
 .highlight-content:last-child{margin-bottom:0px;}
 
@@ -93,13 +92,13 @@ h2{font-size: 24px; color: #434343;}
 
 
 
-.other h1{text-align: center; font-size: 40px; padding-bottom: 4rem;}
+.other h1{text-align: center; font-size: 3vw; padding-bottom: 4rem;}
 
-.other{font-size: 36px;
+/* .other{font-size: 36px;
   font-weight: 500;
   text-align: left;
   padding-bottom: 2rem;
-  }
+  } */
 
   .container img {
       display: block;
@@ -420,6 +419,7 @@ margin: 0 auto;}
     }
     .intro-text {font-size: 4vw; line-height: 160%;}
     .intro h1{font-size: 6vw; font-weight: 600; line-height: 200%;}
+    .other h1{font-size: 4vw;}
 
     .title-page
     {
@@ -481,10 +481,11 @@ margin: 0 auto;}
   .content:first-child{padding-top: 8rem;}
 
   .intro {padding:2rem 0rem; justify-content: center; align-content: center;}
-  .intro-hero {padding-bottom: 4rem;}
-  .intro-text {font-size: 3vw; line-height: 160%;}
-  .intro h1{font-size: 4vw; font-weight: 600; line-height: 200%;}
-  .intro * {text-align: center;}
+  .intro-hero {padding-bottom: 1rem;}
+  .intro-text {font-size: 2.5vw; line-height: 160%;}
+  .intro h1{font-size: 3vw; font-weight: 600; line-height: 200%; max-width: 40ch;padding-top:3rem;}
+  .intro * {text-align: left;}
+  .other h1{font-size: 3vw;}
 
   /* Section Grids*/
 
@@ -492,18 +493,18 @@ margin: 0 auto;}
     grid-template-columns: repeat(10, 1fr);
   }
   .section-center{
-    grid-column-start: 2;
-    grid-column-end: 10;
+    grid-column-start: 1;
+    grid-column-end: 11;
   }
 
   .section-left {
-    grid-column-start: 2;
-    grid-column-end: 10;
+    grid-column-start: 1;
+    grid-column-end: 6;
   }
 
   .section-right {
-    grid-column-start: 2;
-    grid-column-end: 10;
+    grid-column-start: 6;
+    grid-column-end: 11;
   }
 
   .section-wide{
@@ -512,8 +513,8 @@ margin: 0 auto;}
   }
 
   .section-large{
-    grid-column-start: 2;
-    grid-column-end: 10;
+    grid-column-start: 1;
+    grid-column-end: 11;
   }
 
 }
@@ -531,7 +532,8 @@ margin: 0 auto;}
   .intro-text {font-size: 2vw; line-height: 160%;max-width: 20ch; padding-top:01rem;}
   .intro h1{font-size: 2.5vw; font-weight: 600; line-height: 150%; max-width: 40ch; padding-top:6rem;}
   .intro h2{font-size: 2.5vw; font-weight: 600; line-height: 150%; padding-top:6rem; }
-    .intro * {text-align: left;}
+  .intro * {text-align: left;}
+  .other h1{font-size: 2vw; padding-bottom: 8rem;}
 
 
   .section-grid h2{font-size: 32px; max-width: 35ch;}
